--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -4,7 +4,7 @@
 @custom-variant dark (&:where([data-theme=dark], [data-theme=dark] *));
 
 @plugin "daisyui/theme" {
-  name: 'cdark';
+  name: 'dark-p';
   default: false;
   prefersdark: true;
   color-scheme: 'dark';
@@ -39,7 +39,7 @@
 }
 
 @plugin "daisyui/theme" {
-  name: 'clean';
+  name: 'light-b';
   default: true;
   prefersdark: false;
   color-scheme: 'light';
@@ -52,6 +52,41 @@
   --color-secondary: #7828c8;
   --color-secondary-content: oklch(94% 0.028 342.258);
   --color-accent: oklch(58% 0.158 241.966);
+  --color-accent-content: oklch(100% 0 0);
+  --color-neutral: oklch(0% 0 0);
+  --color-neutral-content: oklch(100% 0 0);
+  --color-info: oklch(74% 0.16 232.661);
+  --color-info-content: oklch(29% 0.066 243.157);
+  --color-success: #17c964;
+  --color-success-content: oklch(37% 0.077 168.94);
+  --color-warning: #f5a524;
+  --color-warning-content: oklch(41% 0.112 45.904);
+  --color-error: #f31260;
+  --color-error-content: oklch(27% 0.105 12.094);
+  --radius-selector: 2rem;
+  --radius-field: 0.25rem;
+  --radius-box: 0.5rem;
+  --size-selector: 0.25rem;
+  --size-field: 0.25rem;
+  --border: 1px;
+  --depth: 0;
+  --noise: 0;
+}
+
+@plugin "daisyui/theme" {
+  name: 'light-g';
+  default: false;
+  prefersdark: false;
+  color-scheme: 'light';
+  --color-base-100: oklch(100% 0 0);
+  --color-base-200: #f4f4f5;
+  --color-base-300: #e4e4e7;
+  --color-base-content: #11181c;
+  --color-primary: #006fee;
+  --color-primary-content: oklch(93% 0.034 272.788);
+  --color-secondary: #7828c8;
+  --color-secondary-content: oklch(94% 0.028 342.258);
+  --color-accent: oklch(72% 0.219 149.579);
   --color-accent-content: oklch(100% 0 0);
   --color-neutral: oklch(0% 0 0);
   --color-neutral-content: oklch(100% 0 0);
@@ -155,4 +190,10 @@
 
 .underline-animation:hover::after {
   width: 100%;
+}
+
+* {
+  transition:
+    background-color 0.3s ease-out,
+    color 0.3s ease-out;
 }
